# flam-edge-detection-viewer

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/flam/edgedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/flam/edgedetection/: MainActivity.kt
app/src/main/java/com/flam/edgedetection/camera/: CameraManager.kt
app/src/main/java/com/flam/edgedetection/gl/: GLRenderer.kt
app/src/main/java/com/flam/edgedetection/jni/: NativeProcessor.kt
app/src/main/java/com/flam/edgedetection/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/test/java/com/flam/edgedetection/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: app.ts  index.html  styles.css
